apps/api/tests/testresults.txt
C:\Git_Repos\mana_meeples_singles_market>pnpm --filter ./apps/api test

> @mana-meeples/api@ test C:\Git_Repos\mana_meeples_singles_market\apps\api
> vitest


 DEV  v2.1.9 C:/Git_Repos/mana_meeples_singles_market/apps/api

stdout | tests/integration/orders.routes.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200890.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200890.txt

stdout | tests/e2e/checkout.flow.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200901.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200901.txt

stdout | tests/integration/storefront.routes.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200908.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200908.txt

stdout | tests/integration/cards.search.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200894.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200894.txt

stdout | tests/integration/inventory.routes.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200896.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200896.txt

stdout | tests/integration/error-handling.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200900.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200900.txt

stdout | tests/integration/auth.routes.test.ts
📝 Test logging initialized:
   JSON: C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200909.json
   TXT:  C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200909.txt

stdout | tests/integration/error-handling.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: 🔑 add access controls to secrets: https://dotenvx.com/ops

stdout | tests/integration/error-handling.test.ts > Error Handling > 400 Bad Request > returns 400 for malformed request body
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:07.567Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'MISSING', hasPassword: false }

stderr | tests/integration/error-handling.test.ts > Error Handling > 400 Bad Request > returns 400 for malformed request body
❌ Missing credentials

stderr | tests/integration/error-handling.test.ts > Error Handling > 401 Unauthorized > returns 401 for protected routes without auth
❌ No admin token found in cookies

stdout | tests/integration/error-handling.test.ts > Error Handling > Content-Type validation > requires JSON content-type for POST requests
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:07.580Z
🔑 Admin login attempt - handler entered

stderr | tests/integration/error-handling.test.ts > Error Handling > Content-Type validation > requires JSON content-type for POST requests
❌ Invalid request body

stdout | tests/integration/inventory.routes.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: 🔑 add access controls to secrets: https://dotenvx.com/ops

stdout | tests/integration/inventory.routes.test.ts
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:08.468Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stdout | tests/integration/error-handling.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200900.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200900.json

stdout | tests/integration/cards.search.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: ⚙️  write to custom object with { processEnv: myObject }

stderr | tests/integration/cards.search.test.ts
⚠️ Unexpected database pool error: terminating connection due to administrator command

stdout | tests/integration/storefront.routes.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: 👥 sync secrets across teammates & machines: https://dotenvx.com/ops

stdout | tests/e2e/checkout.flow.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: ⚙️  write to custom object with { processEnv: myObject }

stdout | tests/integration/orders.routes.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: ✅ audit secrets and track compliance: https://dotenvx.com/ops

stdout | tests/integration/cards.search.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200894.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200894.json

stdout | tests/integration/orders.routes.test.ts
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:10.023Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stderr | tests/integration/inventory.routes.test.ts > POST /api/admin/inventory > requires authentication
❌ No admin token found in cookies

stdout | tests/integration/auth.routes.test.ts
[dotenv@17.2.3] injecting env (22) from .env -- tip: 🔑 add access controls to secrets: https://dotenvx.com/ops

stdout | tests/integration/auth.routes.test.ts > POST /api/auth/admin/login > rejects login with missing credentials
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:10.921Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'MISSING', hasPassword: false }

stderr | tests/integration/auth.routes.test.ts > POST /api/auth/admin/login > rejects login with missing credentials
❌ Missing credentials

stdout | tests/integration/auth.routes.test.ts > POST /api/auth/admin/login > rejects login with invalid credentials
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:10.932Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
❌ Invalid credentials

stdout | tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > completes a full customer journey from browsing to order placement
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:11.404Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stdout | tests/integration/auth.routes.test.ts > POST /api/auth/admin/login > accepts valid admin credentials and sets cookie
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:11.939Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stdout | tests/integration/auth.routes.test.ts > POST /api/auth/admin/logout > clears the admin token cookie
🔐 AUTH POST /api/auth/admin/logout - 2025-10-23T02:40:11.944Z
🚪 Admin logout request

stdout | tests/integration/auth.routes.test.ts > GET /api/auth/admin/check > returns 401 when no token provided
🔐 AUTH GET /api/auth/admin/check - 2025-10-23T02:40:11.947Z
🔍 Admin auth check request
❌ No admin token found

stdout | tests/integration/auth.routes.test.ts > GET /api/auth/admin/check > returns authenticated status with valid token
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:11.950Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stdout | tests/integration/auth.routes.test.ts > GET /api/auth/admin/check > returns authenticated status with valid token
🔐 AUTH GET /api/auth/admin/check - 2025-10-23T02:40:11.954Z
🔍 Admin auth check request
🔍 Verifying token...
✅ Auth check successful for: admin

stdout | tests/integration/auth.routes.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200909.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200909.json

stderr | tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > handles out-of-stock scenario gracefully
❌ Create order error: Error: Insufficient stock for Lightning Bolt
    at C:\Git_Repos\mana_meeples_singles_market\apps\api\src\routes\orders.ts:191:17
    at processTicksAndRejections (node:internal/process/task_queues:95:5)

stderr | tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > handles concurrent orders for the same item
❌ Create order error: Error: Insufficient stock for Lightning Bolt
    at C:\Git_Repos\mana_meeples_singles_market\apps\api\src\routes\orders.ts:230:17
    at processTicksAndRejections (node:internal/process/task_queues:95:5)

stdout | tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > allows admin to cancel an order and restore inventory
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:15.599Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stderr | tests/integration/storefront.routes.test.ts
⚠️ Unexpected database pool error: terminating connection due to administrator command

stdout | tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > validates customer input sanitization during checkout
🔐 AUTH POST /api/auth/admin/login - 2025-10-23T02:40:16.910Z
🔑 Admin login attempt - handler entered
📋 Credentials received: { username: 'admin', hasPassword: true }
🔍 Validating credentials...
✅ Credentials valid, generating token...
🎫 Token generated
🍪 Setting cookie with config: {
  httpOnly: true,
  secure: false,
  sameSite: 'strict',
  domain: '(current domain)'
}
📤 Sending response: { success: true, message: 'Login successful', expiresIn: '24h' }
✅ Response sent successfully

stdout | tests/integration/storefront.routes.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200908.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200908.json

stderr | tests/integration/inventory.routes.test.ts > GET /api/admin/inventory > requires authentication
❌ No admin token found in cookies

stderr | tests/integration/orders.routes.test.ts > POST /api/orders > handles transaction rollback on inventory update failure
❌ Create order error: Error: Inventory item not found: 999999
    at C:\Git_Repos\mana_meeples_singles_market\apps\api\src\routes\orders.ts:184:17
    at processTicksAndRejections (node:internal/process/task_queues:95:5)

stderr | tests/e2e/checkout.flow.test.ts
⚠️ Unexpected database pool error: terminating connection due to administrator command
⚠️ Unexpected database pool error: terminating connection due to administrator command

stdout | tests/e2e/checkout.flow.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200901.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200901.json

stderr | tests/integration/orders.routes.test.ts > GET /api/admin/orders > requires authentication
❌ No admin token found in cookies

stderr | tests/integration/inventory.routes.test.ts > PATCH /api/admin/inventory/:id > requires authentication
❌ No admin token found in cookies

stderr | tests/integration/orders.routes.test.ts > GET /api/admin/orders/:id > requires authentication
❌ No admin token found in cookies

stderr | tests/integration/inventory.routes.test.ts > DELETE /api/admin/inventory/:id > requires authentication
❌ No admin token found in cookies

stderr | tests/integration/inventory.routes.test.ts
⚠️ Unexpected database pool error: terminating connection due to administrator command

stderr | tests/integration/orders.routes.test.ts > PATCH /api/admin/orders/:id/status > requires authentication
❌ No admin token found in cookies

stdout | tests/integration/inventory.routes.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200896.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200896.json

stderr | tests/integration/orders.routes.test.ts
⚠️ Unexpected database pool error: terminating connection due to administrator command
⚠️ Unexpected database pool error: terminating connection due to administrator command

stdout | tests/integration/orders.routes.test.ts

✅ Test environment logs written:
   📄 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200890.txt
   📊 C:\Git_Repos\mana_meeples_singles_market\apps\api\test-logs\test-env-1761187200890.json

 ❯ tests/e2e/checkout.flow.test.ts (6) 17980ms
   ❯ Complete Checkout Flow (E2E) (6) 8126ms
     ✓ completes a full customer journey from browsing to order placement 1512ms
     ✓ handles out-of-stock scenario gracefully 1401ms
     ✓ handles concurrent orders for the same item 1420ms
     ✓ allows admin to cancel an order and restore inventory 1325ms
     ✓ validates customer input sanitization during checkout 1301ms
     × handles multiple items in a single order 1165ms
 ✓ tests/integration/auth.routes.test.ts (6) 11953ms
 ✓ tests/integration/cards.search.test.ts (1) 9103ms
 ✓ tests/integration/error-handling.test.ts (7) 7604ms
 ✓ tests/integration/inventory.routes.test.ts (16) 25900ms
 ✓ tests/integration/orders.routes.test.ts (19) 28097ms
 ✓ tests/integration/storefront.routes.test.ts (5) 16308ms
 ✓ tests/unit/auth.validateCredentials.test.ts (4)
 ✓ tests/unit/slugify.test.ts (1)
 ✓ tests/unit/utils.test.ts (43)
 ✓ tests/unit/validation.test.ts (10)

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯ Failed Tests 1 ⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯

 FAIL  tests/e2e/checkout.flow.test.ts > Complete Checkout Flow (E2E) > handles multiple items in a single order
AssertionError: expected 1 to be 2 // Object.is equality

- Expected
+ Received

- 2
+ 1

 ❯ tests/e2e/checkout.flow.test.ts:415:73
    413|
    414|     expect(orderRes.body.order).toBeDefined();
    415|     expect(orderRes.body.order.items?.length || orderData.items.length).toBe(2);
       |                                                                         ^
    416|   });
    417| });

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1/1]⎯

 Test Files  1 failed | 10 passed (11)
      Tests  1 failed | 117 passed (118)
   Start at  15:39:59
   Duration  29.33s (transform 682ms, setup 0ms, collect 6.08s, tests 117.09s, environment 2ms, prepare 2.18s)

 FAIL  Tests failed. Watching for file changes...
       press h to show help, press q to quit
C:\Git_Repos\mana_meeples_singles_market\apps\api:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  @mana-meeples/api@ test: `vitest`
Exit status 1

C:\Git_Repos\mana_meeples_singles_market>